--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -24,6 +24,10 @@
     overflow: hidden;
 }
 
+.overflow-x-scroll{
+    overflow-x: scroll;
+}
+
 @media screen and (max-width: 700px) {
 
     .artist-table-container {
