--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,4 +1,13 @@
 .video__section {
     height: 90vh;
-    background-color: gray;
+    width: 100%;
+}
+
+.swiper {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    object-fit: cover;
 }
