--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,8 +1,10 @@
 .video__section {
-    height: 90vh;
+    height: 70vh;
     width: 100%;
 }
-
+.cursor-pointer{
+    cursor:pointer!important;
+}
 .swiper {
     width: 100%;
     height: 100%;
@@ -10,4 +12,10 @@
     justify-content: center;
     align-items: center;
     object-fit: cover;
+}
+.swiper-pagination *{
+    background-color: #FFC2AA;
+}
+.swiper-pagination{
+    bottom: 0!important;
 }
