--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,9 @@
+
+body{
+    scroll-behavior: smooth;
+    background-color: #DCB0FF;
+    font-family: serif!important;
+}
 .profile-image-container{
     width: 50px;
     height: 50px;
@@ -27,11 +33,36 @@
 .overflow-x-scroll{
     overflow-x: scroll;
 }
+/* Start navigation bar */
+.logo >a{
+    cursor: pointer;
+    color:gray;
+    font-weight:bolder!important;
+}
+@media screen and (min-width:700px){
+    .logo >a{
+        padding-left:50px;
+        font-size:1.5rem!important;
+    }
+
+}
+/* End navigation bar */
+
+/* footer */
+#footer{
+    background-image:url("/assets/images/home/footer.svg")!important;
+    background-repeat:no-repeat;
+    background-position:fixed;
+}
+/* end footer */
 
 @media screen and (max-width: 700px) {
 
     .artist-table-container {
         overflow-x: scroll;
+    }
+    .navbar-nav{
+        display:none!important;
     }
 
     /* ArtWork create */
