--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,6 +1,8 @@
 .video__section {
     height: 70vh;
-    width: 100%;
+    width: 80%;
+    padding: 0px;
+    margin:0 auto;
 }
 .cursor-pointer{
     cursor:pointer!important;
