--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,8 +1,18 @@
-
+*{
+    box-sizing: border-box;
+    padding:0;
+    margin:0;
+}
 body{
     scroll-behavior: smooth;
-    background-color: #DCB0FF;
+    background-color: #e3f6f5 !important;
     font-family: serif!important;
+}
+.section{
+    height:100vh;
+}
+.section-80{
+    height: 90vh!important;
 }
 .profile-image-container{
     width: 50px;
@@ -34,25 +44,36 @@ body{
     overflow-x: scroll;
 }
 /* Start navigation bar */
+#nav{
+    box-shadow: none;
+    background-color: #e3f6f5 !important;
+    opacity: 0.8;
+}
+
+.nav-link{
+    color:rgb(50, 49, 49)!important;
+}
 .logo >a{
     cursor: pointer;
-    color:gray;
     font-weight:bolder!important;
 }
+
+
 @media screen and (min-width:700px){
     .logo >a{
         padding-left:50px;
-        font-size:1.5rem!important;
+        font-size:1.8rem!important;
     }
 
 }
 /* End navigation bar */
 
 /* footer */
-#footer{
-    background-image:url("/assets/images/home/footer.svg")!important;
+body{
+    background-image:url("/assets/images/home/wave.svg")!important;
     background-repeat:no-repeat;
-    background-position:fixed;
+    /* background-size:cover; */
+    background-position:bottom;
 }
 /* end footer */
 
@@ -73,4 +94,104 @@ body{
         width: 100% !important;
     } */
     
+}
+
+
+.active{
+    color:rgb(108, 108, 255)!important;
+}
+
+.text-shadow-large{
+    text-shadow: 7px 4px 5px rgb(156, 174, 182);
+}
+.text-gradient-1{
+    background: #23CFC4;
+    background: linear-gradient(to right, #23CFC4 0%, #686DE8 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+.text-shadow-middle{
+    text-shadow: 7px 4px 5px rgb(156, 174, 182);
+}
+.active-gradient{
+    background: #05cff7;
+    background: radial-gradient(circle farthest-corner at center center, #0abde1 0%, #231421 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;   
+}
+
+.box-shadow-1{
+    box-shadow: 3px 3px 10px #b0eefa!important;
+}
+
+.text-gradient-2{
+    background: #ffffff;
+    background: linear-gradient(to right, #ffffff 0%, rgb(255, 255, 255) 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+
+/* Start text aimation */
+
+#text1,
+#text2 {
+    position: absolute;
+    width: 100%;
+    display: inline-block;
+
+    font-family: "Raleway", sans-serif;
+    font-style: italic;
+    font-size: 50pt;
+
+    text-align: center;
+
+    user-select: none;
+}
+
+/* End text animation */
+
+.artwork-small div div{
+    box-shadow: rgba(158, 236, 240, 0.2) 5px 18px 20px -10px;
+}
+
+.home-card-title{
+    border-radius: 50%;
+    padding: 5px 20px;
+    margin-bottom: 30px;
+    box-shadow: rgba(11, 11, 11, 0.2) 5px 18px 20px -10px;
+}
+
+#artwork_search_icon{
+    /* position: fixed;    
+    z-index: 1000;
+    border-radius: 50%;
+    /* left: 1000px; */
+    /* top:70px;
+    right:30px; */
+    width: 75px;
+    height: 50px;
+}
+#artwork_search{
+    position: absolute;
+    background-color: #b0eefa;
+    padding: 30px;
+    width: 400px;
+    z-index: 1001;
+    height:500px;
+    top:85px;
+    right:150px;
+}
+
+.px-100{
+    padding-left:100px!important;
+    padding-right:100px!important;
+}
+
+
+#artwork_search_icon button{
+    background-color: #b0eefa;
+}
+#artwork_search_icon button >i{
+    font-size: 1.5rem !important;
 }
