--- a/public/css/client/home.css
+++ b/public/css/client/home.css
@@ -1,29 +1,5 @@
-.video__section {
-    height: 70vh;
-    width: 80%;
-    padding: 0px;
-    margin:0 auto;
-}
-.cursor-pointer{
-    cursor:pointer!important;
-}
-.swiper {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    object-fit: cover;
-}
-.swiper-pagination *{
-    background-color: #FFC2AA;
-}
-.swiper-pagination{
-    bottom: 0!important;
-}
 
 /* Start text aimation */
-
 #text1,
 #text2 {
     position: absolute;
@@ -39,7 +15,7 @@
     user-select: none;
 }
 
-.text-gradient-2{
+.carousel-text-blur{
     background: #ffffff;
     background: linear-gradient(to right, #ffffff 0%, rgb(255, 255, 255) 100%);
     -webkit-background-clip: text;
@@ -52,37 +28,27 @@
 #nav{
     box-shadow: none;
     /* background-color: var(--primary-color) !important; */
-    background-color:#a99180;
+    background-color:var(--bg-nav);
     /* opacity: 0.8; */
-}
-
-.text-logo{
-    color:rgb(221, 223, 225);
-}
-.text-logo:hover{
-    color:rgb(221, 223, 225);
 }
 
 .nav-link{
     color:var(--secondary-color)!important; 
 }
-.nav_transition{
-    border:0;
-    transition: border 2s 2s!important;
+.dropdown-menu a:hover{
+    background-color:var(--bg-primary)!important;
+    color:white!important;
 }
 .nav-link-border-bottom{
     border-bottom: 2px solid rgb(255, 255, 255)!important;
 }
-
 .logo >a{
     cursor: pointer;
     font-weight:bolder!important;   
 }
-
 .active{
     color:rgb(255, 255, 255)!important;  
 }
-
 
 @media screen and (min-width:700px){
     .logo >a{
@@ -95,7 +61,6 @@
 
 
 /* footer */
-
 #footer *{
     color: var(--secondary-color)!important;
 }
@@ -112,3 +77,48 @@
     color: rgb(57, 56, 56);
 }
 /* end footer */
+
+
+.gradient-brand-color {
+    background-image: -webkit-linear-gradient(0deg, var(--bg-primary) 0%, var(--bg-primary) 100%);
+    background-image: -ms-linear-gradient(0deg, #376be6 0%, #6470ef 100%);
+    color: #fff;
+}
+.contact-info__wrapper {
+    overflow: hidden;
+    border-radius: .625rem .625rem 0 0
+}
+
+@media (min-width: 1024px) {
+    .contact-info__wrapper {
+        border-radius: 0 .625rem .625rem 0;
+        padding: 5rem !important
+    }
+}
+.contact-info__list span.position-absolute {
+    left: 0
+}
+.z-index-101 {
+    z-index: 101;
+}
+.list-style--none {
+    list-style: none;
+}
+.contact__wrapper {
+    background-color: #fff;
+    border-radius: 0 0 .625rem .625rem
+}
+
+@media (min-width: 1024px) {
+    .contact__wrapper {
+        border-radius: .625rem 0 .625rem .625rem
+    }
+}
+@media (min-width: 1024px) {
+    .contact-form__wrapper {
+        padding: 5rem !important
+    }
+}
+.shadow-lg, .shadow-lg--on-hover:hover {
+    box-shadow: 0 1rem 3rem rgba(132,138,163,0.1) !important;
+}
